--- a/index.html
+++ b/index.html
@@ -220,129 +220,117 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
         </div>
         <!-- About End -->
 
-
-        <!-- Services Start -->
-        <div class="container-fluid services py-5">
-            <div class="container text-center py-5">
-                <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Services</h5>
-                    <h1 class="display-5">Common Pest Control Services</h1>
-                </div>
-                <div class="row g-5">
-                    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="bg-light rounded p-5 services-item">
-                            <div class="d-flex" style="align-items: center; justify-content: center;">
-                                <div class="mb-4 rounded-circle services-inner-icon">
-                                    <i class="fa fa-spider fa-3x text-primary"></i>
-                                </div>
-                            </div>
-                            <h4>Rodent Control</h4>
-                            <p class="fs-5">Fast, eco Rodent Control for a pest-free space!</p>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="bg-light rounded p-5 services-item">
-                            <div class="d-flex" style="align-items: center; justify-content: center;">
-                                <div class="mb-4 rounded-circle services-inner-icon">
-                                <i class="fa fa-rat fa-3x text-primary"></i>
-
-                                </div>
-                            </div>
-                            <h4 class="text-center">Mosquitos</h4>
-                            <p class="text-center fs-5">Lorem ipsum dolor sit amet consectetur adipisc elit sed.</p>
-                            <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3">Learn More</button>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="bg-light rounded p-5 services-item">
-                            <div class="d-flex" style="align-items: center; justify-content: center;">
-                                <div class="mb-4 rounded-circle services-inner-icon">
-                                    <i class="fa fa-spider fa-3x text-primary"></i>
-                                </div>
-                            </div>
-                            <h4 class="text-center">Rodents</h4>
-                            <p class="text-center fs-5">Lorem ipsum dolor sit amet consectetur adipisc elit sed.</p>
-                            <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3">Learn More</button>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".9s">
-                        <div class="bg-light rounded p-5 services-item">
-                            <div class="d-flex" style="align-items: center; justify-content: center;">
-                                <div class="mb-4 rounded-circle services-inner-icon">
-                                    <i class="fa fa-spider fa-3x text-primary"></i>
-                                </div>
-                            </div>
-                            <h4 class="text-center">Termites</h4>
-                            <p class="text-center fs-5">Lorem ipsum dolor sit amet consectetur adipisc elit sed.</p>
-                            <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="btn btn-primary border-0 rounded-pill px-4 py-3 mt-4 wow fadeInUp" data-wow-delay=".3s">More Services</button>
-            </div>
-        </div>
-        <!-- Services End -->
-
-
         <!-- Project Start -->
-        <div class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Project</h5>
-                    <h1 class="display-5">Our recently completed projects</h1>
+       <div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="text-center mb-5">
+            <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Service</h3>
+        </div>
+        <div class="row g-5">
+            <!-- Project Item 1 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Rodent Control</a>
+                        <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
+                    </div>
                 </div>
-                <div class="row g-5">
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Whole Home Sanitizing</a>
-                        </div>
+            </div>
+
+            <!-- Project Item 2 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Mosquito Control</a>
+                        <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Education center Cleaning</a>
-                        </div>
+                </div>
+            </div>
+
+            <!-- Project Item 3 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-3.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Bed Bug Control</a>
+                        <p class="fs-6 text-center">Fast, eco Bed Bug Control for a bite-free sleep!</p>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-3.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Warehouse Cleaning</a>
-                        </div>
+                </div>
+            </div>
+            <!-- Project Item 4 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">WASP Control</a>
+                        <p class="fs-6 text-center">Fast, eco Wasp Control for a sting-free zone</p>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Hospital Cleaning</a>
-                        </div>
+                </div>
+            </div>
+
+            <!-- Project Item 5 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-5.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Ants Treatment</a>
+                        <p class="fs-6 text-center">Fast, eco Ants Treatment for a pest-free space!</p>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-5.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Factory Cleaning</a>
-                        </div>
+                </div>
+            </div>
+          <!-- Project Item 6 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-6.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Fly Removal</a>
+                        <p class="fs-6 text-center">Swift, eco Fly Removal for a pest-free zone!</p>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-6.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Furniture Sanitizing</a>
-                        </div>
+                </div>
+            </div>
+          <!-- Project Item 7 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-7.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Cockroach Control</a>
+                        <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Item 8 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <img src="img/project-8.jpg" class="img-fluid h-100" alt="img">
+                    <div class="project-details">
+                        <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
+                        <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
         <!-- Project End -->
 
 
