--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                                     <a href="blog.html" class="dropdown-item">Blog Post</a>
                                     <a href="team.html" class="dropdown-item">Team Members</a>
                                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -127,7 +126,6 @@
                             <div class="container carousel-content">
                                 <h4 class="text-white mb-4 animated slideInDown">No 1 Pest Control Services</h4>
                                 <h1 class="text-white display-1 mb-4 animated slideInDown">Enjoy Your Home Totally Pest Free</h1>
-                                <a href="" class="me-2"><button type="button" class="px-5 py-3 btn btn-primary border-2 rounded-pill animated slideInDown">Read More</button></a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +151,7 @@
                 <div class="about-img">
                     <div class="rotate-left bg-dark"></div>
                     <div class="rotate-right bg-dark"></div>
-                    <img src="img/about-img.jpg" class="img-fluid h-100" alt="img">
+                    <img src="img/about-img.jpg" class="img-fluid h-75" alt="img">
                     <div class="bg-white experiences">
                         <h1 class="display-3">6</h1>
                         <h6 class="fw-bold">Years Of Experiences</h6>
@@ -162,7 +160,7 @@
             </div>
             <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
                 <div class="about-item overflow-hidden">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h5>
+                    <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
                     <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
                     <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
                     <div class="row">
@@ -370,10 +368,7 @@
                         <p>Rely on our eco-friendly cleaning for a spotless, safe space!</p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
+            
         <!-- Blog Item 4 -->
             <div class="blog-item">
                 <img src="img/blog-4.jpg" class="img-fluid w-100 rounded-top" alt="">
@@ -384,6 +379,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 <!-- Blog End -->
 
 
@@ -414,19 +412,15 @@
 
 
         <!-- pricing Start -->
-        <div class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                </div>
-                <div class="row g-5">
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+       <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
                         <div class="rounded bg-light pricing-item">
                             <div class="bg-primary py-3 px-5 text-center rounded-top border-bottom border-dark">
-                                <h2 class="m-0">100+</h2>
+                                <h2 class="m-0">projects</h2>
                             </div>
                             <div class="px-4 py-5 text-center bg-primary pricing-label mb-2">
-                                <h1 class="mb-0">>Successful<span class="text-secondary fs-5 fw-normal"></span></h1>
-                                <p class="mb-0"Projects</p>
+                                <h1 class="mb-0">100+<span class="text-secondary fs-5 fw-normal">Successful</span></h1>
+                                <p class="mb-0">projects</p>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -463,8 +457,9 @@
         <div class="container-fluid testimonial py-5">
             <div class="container py-5">
                 <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Testimonial</h5>
-                    <h1 class="display-5 w-50 mx-auto">What Clients Say About Our Services</h1>
+                    <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h3>
+                    <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
+                    <h6 class="display-5 w-50 mx-auto">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</h6>
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
                     <div class="testimonial-item">
