--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                      <div class="container-fluid testimonial py-5">
                      <div class="container py-5">
                      <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                     <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h3>
+                     <h class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
                      <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
-                     <h6 class="display-5 w-50 mx-auto">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with an appropriate standard quality management system. Documents to reduce risk in your business.</h6>
+                     <p>Our specialist Entomologists deliver inspections and audits on a regular basis to provide you with an appropriate standard quality management system. Our documented processes aim to reduce risk in your business.</p>
                      </div>
     </div>
 </div>
