--- a/index.html
+++ b/index.html
@@ -144,17 +144,11 @@
 
 
         <!-- About Start -->
-<div class="container-fluid py-5">
-    <div class="container py-5">
-        <div class="row g-5">
-            <div class="col-lg-1 col-md-1 wow fadeInUp" data-wow-delay=".9s">
-                <div class="about-img">
-                    <div class="rotate-left bg-dark"></div>
-                    <div class="rotate-right bg-dark"></div>
-                    <img src="img/about-img.jpg" class="img-fluid h-75" alt="img">
-                    <div class="bg-white experiences">
-                        <h1 class="display-3">6</h1>
-                        <h6 class="fw-bold">Years Of Experiences</h6>
+</style>
+</head>
+<body>
+
+    <img src="/img/brisklogo.png" alt="brisk logo">
                     </div>
                 </div>
             </div>
