--- a/index.html
+++ b/index.html
@@ -144,71 +144,99 @@
 
 
         <!-- About Start -->
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .logo-container {
+      text-align: center;
+    }
+
+    .logo-container img {
+      max-width: calc(100% - 30px); /* Decrease the size by 30px */
+      height: auto;
+      max-height: 70px; /* Adjust the size as needed */
+    }
+
+    .about-item {
+      text-align: justify;
+    }
+  </style>
 </head>
 <body>
 
-    <img src="/img/brisklogo.png" alt="brisk logo">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
-                <div class="about-item overflow-hidden">
-                    <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
-                    <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
-                    <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="text-center">
-                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                    <i class="fas fa-city fa-4x text-primary"></i>
-                                </div>
-                                <div class="my-2">
-                                    <h5>Building</h5>
-                                    <h5>Cleaning</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="text-center">
-                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                    <i class="fas fa-school fa-4x text-primary"></i>
-                                </div>
-                                <div class="my-2">
-                                    <h5>Education</h5>
-                                    <h5>center</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="text-center">
-                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                    <i class="fas fa-warehouse fa-4x text-primary"></i>
-                                </div>
-                                <div class="my-2">
-                                    <h5>Warehouse</h5>
-                                    <h5>Cleaning</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="text-center">
-                                <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-                                    <i class="fas fa-hospital fa-4x text-primary"></i>
-                                </div>
-                                <div class="my-2">
-                                    <h5>Hospital</h5>
-                                    <h5>Cleaning</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="logo-container">
+  <img src="/img/brisklogo.png" alt="brisk logo">
 </div>
-<!-- About End -->
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
+      <div class="about-item overflow-hidden">
+        <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
+        <h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
+        <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+        <div class="row">
+          <div class="col-3">
+            <div class="text-center">
+              <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                <i class="fas fa-city fa-4x text-primary"></i>
+              </div>
+              <div class="my-2">
+                <h5>Building</h5>
+                <h5>Cleaning</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                <i class="fas fa-school fa-4x text-primary"></i>
+              </div>
+              <div class="my-2">
+                <h5>Education</h5>
+                <h5>center</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                <i class="fas fa-warehouse fa-4x text-primary"></i>
+              </div>
+              <div class="my-2">
+                <h5>Warehouse</h5>
+                <h5>Cleaning</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+                <i class="fas fa-hospital fa-4x text-primary"></i>
+              </div>
+              <div class="my-2">
+                <h5>Hospital</h5>
+                <h5>Cleaning</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
 
 
         <!-- Project Start -->
