--- a/index.html
+++ b/index.html
@@ -463,18 +463,16 @@
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
+                            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE, where your peace of mind is our top priority. Our dedicated team of experts is committed to providing superior pest control solutions tailored to your needs. With our comprehensive services, cutting-edge techniques, and eco-friendly practices, we guarantee 100% satisfaction in safeguarding your home or business from pests. Trust us for a pest-free environment, backed by our unwavering commitment to your complete satisfaction</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
                                 <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle py-2" alt="">
                                 <div class="position-absolute" style="top: 33px; left: -25px;">
-                                    <i class="fa fa-quote-left rounded-pill bg-primary text-dark p-3"></i>
                                 </div>
                             </div>
                             <div class="ms-3">
-                                <h4 class="mb-0">Client Name</h4>
-                                <p class="mb-1">Profession</p>
+                                <h4 class="mb-0">100% Satisifaction Guarantee</h4>
                                 <div class="d-flex">
                                     <small class="fas fa-star text-primary me-1"></small>
                                     <small class="fas fa-star text-primary me-1"></small>
