--- a/index.html
+++ b/index.html
@@ -473,24 +473,28 @@
                             </div>
                             <div class="ms-3">
                                 <h4 class="mb-0">100% Satisifaction Guarantee</h4>
+                                <div class="d-flex">
+                                    <small class="fas fa-star text-primary me-1"></small>
+                                    <small class="fas fa-star text-primary me-1"></small>
+                                    <small class="fas fa-star text-primary me-1"></small>
+                                    <small class="fas fa-star text-primary me-1"></small>
+                                    <small class="fas fa-star text-primary me-1"></small>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
+                            <p class="fs-5 m-0">Brisk Pest Management: Your premier solution for top-tier, eco-friendly pest control. Our experts ensure an impeccably pest-free environment, offering 24/7 Emergency Services for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
                                 <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle py-2" alt="">
                                 <div class="position-absolute" style="top: 33px; left: -25px;">
-                                    <i class="fa fa-quote-left rounded-pill bg-primary text-dark p-3"></i>
                                 </div>
                             </div>
                             <div class="ms-3">
-                                <h4 class="mb-0">Client Name</h4>
-                                <p class="mb-1">Profession</p>
+                                <h4 class="mb-0">24/7 Emergency Service</h4>
                                 <div class="d-flex">
                                     <small class="fas fa-star text-primary me-1"></small>
                                     <small class="fas fa-star text-primary me-1"></small>
@@ -503,18 +507,16 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
+                            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier solution for eco-friendly pest control. Our experts ensure an impeccably pest-free environment, featuring Straight Forward Pricing for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
                         </div>
                         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
                             <div class="position-relative">
                                 <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle py-2" alt="">
                                 <div class="position-absolute" style="top: 33px; left: -25px;">
-                                    <i class="fa fa-quote-left rounded-pill bg-primary text-dark p-3"></i>
                                 </div>
                             </div>
                             <div class="ms-3">
-                                <h4 class="mb-0">Client Name</h4>
-                                <p class="mb-1">Profession</p>
+                                <h4 class="mb-0">Straight Forward Pricing</h4>
                                 <div class="d-flex">
                                     <small class="fas fa-star text-primary me-1"></small>
                                     <small class="fas fa-star text-primary me-1"></small>
@@ -525,33 +527,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="testimonial-item">
-                        <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Our specialist Entomologists delivering inspections/Audit on a regular basis to provide you with appropriate standard quality management system documents to reduce risk in your business.</p>
-                        </div>
-                        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-                            <div class="position-relative">
-                                <img src="img/testimonial-4.jpg" class="img-fluid rounded-circle py-2" alt="">
-                                <div class="position-absolute" style="top: 33px; left: -25px;">
-                                    <i class="fa fa-quote-left rounded-pill bg-primary text-dark p-3"></i>
-                                </div>
-                            </div>
-                            <div class="ms-3">
-                                <h4 class="mb-0">Client Name</h4>
-                                <p class="mb-1">Profession</p>
-                                <div class="d-flex">
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    
         <!-- Testiminial End -->
 
 
